--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		
 	<nav class="nav-bar">
 		<ul>
 			<li>Home</li>
@@ -16,6 +18,7 @@
 			<li>Itinerary</li>
 		</ul>
 	</nav>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
